--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PMG™EDU | All Courses</title>
-
 <style>
 body{
   margin:0;
@@ -16,7 +15,7 @@ body{
   position:relative;
   overflow-x:hidden;
 }
-h1{color:#FFD700;font-size:2.5em; margin-bottom:0;}
+h1{color:#FFD700;font-size:2.5em;margin-bottom:0;}
 .quote{
   font-size:1.5em;
   margin:5px auto 30px;
@@ -59,10 +58,11 @@ h1{color:#FFD700;font-size:2.5em; margin-bottom:0;}
   color:#111;
 }
 .locked{background:#555;color:#ccc;}
-#dictionary input{
+#dictionary input,#payment input{
   padding:8px;border-radius:8px;border:none;width:60%;
+  margin-bottom:8px;
 }
-#dictionary button{
+#dictionary button,#payment button{
   padding:8px 12px;border-radius:8px;border:none;
   font-weight:bold;background:#FFD700;color:#111;cursor:pointer;
 }
@@ -90,15 +90,15 @@ body::before{
   z-index:0;
   pointer-events:none;
 }
+table{width:100%;border-collapse:collapse;margin-top:10px;}
+th,td{padding:8px;border:1px solid #333;text-align:center;}
+th{background:#222;color:#FFD700;}
 </style>
 </head>
-
 <body>
 
 <h1>PMG™EDU</h1>
-<div class="quote">
-  “WORK HARDER, NOBODY CARES.”
-</div>
+<div class="quote">“WORK HARDER, NOBODY CARES.”</div>
 
 <p>All Courses • Monthly Subscription: <b>K25</b></p>
 
@@ -110,9 +110,7 @@ body::before{
   <div class="course" onclick="loadCourse('PH110')"><h3>PH110</h3></div>
 </div>
 
-<div id="papers" class="section">
-  <p>Select a course to view papers.</p>
-</div>
+<div id="papers" class="section"><p>Select a course to view papers.</p></div>
 
 <div id="viewer" class="section" style="display:none;">
   <h2 id="viewer-title"></h2>
@@ -135,29 +133,30 @@ body::before{
 
 <div class="section" id="payment">
   <h2>Payment Verification</h2>
-  <p>Pay K25 via WhatsApp and submit your name and phone:</p>
-  <input type="text" id="payerName" placeholder="Your Name" /><br><br>
-  <input type="text" id="payerPhone" placeholder="Phone Number" /><br><br>
+  <input type="text" id="payerName" placeholder="Your Name" /><br>
+  <input type="text" id="payerPhone" placeholder="Phone Number" /><br>
   <button onclick="markPaid()">I Paid (Submit)</button>
   <p>WhatsApp Admin: <a href="https://wa.me/260775302886" target="_blank">📲 0775302886</a></p>
 </div>
 
-<div class="section" id="adminUnlock" style="display:none;">
-  <h2>Admin Panel</h2>
-  <button onclick="unlockPapers()">Unlock Papers for 30 Days</button>
+<div class="section" id="adminDashboard">
+  <h2>Admin Dashboard</h2>
+  <button onclick="renderDashboard()">Refresh Dashboard</button>
+  <button onclick="exportData()">Export Data</button>
+  <input type="file" onchange="importData(event)"><br>
+  <div id="dashboardContent"></div>
 </div>
 
 <script>
 // Prevent right-click
 document.addEventListener("contextmenu", e => e.preventDefault());
 
-// Years and demo papers
 const years=[2018,2019,2020,2021,2022,2023,2024];
 const demoYears=[2018,2019,2020,2021,2022];
 
-// Payment tracking
 let currentUser = {name:"", phone:"", paid:false, accessExpiry:null};
 
+// Load courses
 function loadCourse(course){
   let html=`<h2>${course} Past Papers</h2>`;
   years.forEach(y=>{
@@ -170,21 +169,20 @@ function loadCourse(course){
   document.getElementById("papers").innerHTML=html;
 }
 
+// Open PDF
 function openPaper(course,year){
-  if(currentUser.accessExpiry && new Date() < currentUser.accessExpiry){
+  if(currentUser.accessExpiry && new Date() < new Date(currentUser.accessExpiry)){
     document.getElementById("viewer-title").innerText=`${course} – ${year} Past Paper`;
     document.getElementById("pdfFrame").src=`past-papers/${course}/${course}-${year}.pdf#toolbar=0&navpanes=0&scrollbar=0`;
     document.getElementById("viewer").style.display="block";
     document.getElementById("viewer").scrollIntoView({behavior:"smooth"});
-  } else {
-    locked();
-  }
+  } else { locked(); }
 }
 
-function locked(){alert("🔒 Locked. Pay K25, send screenshot via WhatsApp, then admin will unlock for 30 days.");}
+function locked(){ alert("🔒 Locked. Verify payment via WhatsApp: 0775302886 then admin will unlock for 30 days."); }
 
-// Dictionary & AI (expanded as requested)
-const dictionary = {
+// Dictionary + AI
+const dictionary={
   /* MA110 */
   "vector":"A quantity with both magnitude and direction.",
   "scalar":"A quantity with magnitude only.",
@@ -199,32 +197,16 @@ const dictionary = {
   "continuity":"A function without breaks at a point.",
   "differential":"An infinitesimal change in a variable.",
   "series":"Sum of terms of a sequence.",
-  "sequence":"Ordered list of numbers.",
-  "polynomial":"Expression with multiple terms of variables and powers.",
-  "laplace transform":"Converts time-domain function to s-domain.",
-  "partial derivative":"Derivative with respect to one variable keeping others constant.",
-  "jacobian":"Matrix of all first-order partial derivatives.",
-  "hessian":"Matrix of second-order partial derivatives.",
-  "eigenvalue":"Scalar λ satisfying Av=λv.",
-  "eigenvector":"Non-zero vector v associated with λ.",
-  "orthogonal":"Vectors with zero dot product.",
   /* PH110 */
   "force":"A push or pull acting on an object.",
   "mass":"Amount of matter in an object.",
-  "weight":"Force due to gravity (mass*g).",
   "velocity":"Speed in a given direction.",
   "acceleration":"Rate of change of velocity.",
-  "momentum":"Mass multiplied by velocity.",
-  "kinetic energy":"Energy due to motion.",
-  "potential energy":"Energy due to position or configuration.",
   "work":"Force applied over a distance.",
   "power":"Rate of doing work.",
   "energy":"Capacity to do work.",
   "friction":"Force opposing motion.",
   "gravity":"Attractive force between masses.",
-  "newton's first law":"Object remains at rest or in motion unless acted upon.",
-  "newton's second law":"F=ma, force equals mass times acceleration.",
-  "newton's third law":"Every action has equal and opposite reaction.",
   /* CH110 */
   "atom":"Smallest unit of an element.",
   "molecule":"Two or more atoms bonded together.",
@@ -233,11 +215,6 @@ const dictionary = {
   "mole":"Amount of substance containing Avogadro's number.",
   "acid":"Substance that donates hydrogen ions.",
   "base":"Substance that accepts hydrogen ions.",
-  "oxidation":"Loss of electrons.",
-  "reduction":"Gain of electrons.",
-  "pH":"Measure of acidity/basicity.",
-  "reaction rate":"Speed at which reactants form products.",
-  "equilibrium":"State where forward and reverse reactions are equal.",
   /* BI110 */
   "cell":"Basic unit of life.",
   "mitosis":"Cell division producing identical cells.",
@@ -245,27 +222,17 @@ const dictionary = {
   "photosynthesis":"Process plants use to make food.",
   "respiration":"Process of releasing energy from food.",
   "enzyme":"Protein that speeds up reactions.",
-  "dna":"Genetic material containing instructions for life.",
-  "rna":"Ribonucleic acid involved in protein synthesis.",
   /* CS110 */
   "algorithm":"Step-by-step method to solve a problem.",
   "variable":"Named storage location in a program.",
   "loop":"Code that repeats.",
   "array":"Collection of values under one name.",
-  "debugging":"Finding and fixing errors.",
-  "function call":"Invoking a function to execute.",
-  "string":"Sequence of characters.",
-  "conditional":"Decision-making statement (if/else).",
-  "object":"Instance of a class containing data and methods.",
-  "class":"Blueprint for creating objects.",
-  "recursion":"Function that calls itself.",
-  "syntax":"Rules defining valid program statements."
+  "debugging":"Finding and fixing errors."
 };
 
 function lookup(){
   const w=document.getElementById("wordInput").value.toLowerCase().trim();
-  document.getElementById("definition").innerText=
-    dictionary[w]||"❌ Term not found.";
+  document.getElementById("definition").innerText=dictionary[w]||"❌ Term not found.";
 }
 
 function askAI(){
@@ -274,37 +241,95 @@ function askAI(){
   for(let term in dictionary){
     if(q.includes(term)){
       response=`💡 ${term.toUpperCase()}\n${dictionary[term]}\n\n📘 Study Tip: Practice using past papers.`;
-      if(q.includes("example")){
-        response+=`\n📌 Example: Apply ${term} step by step.`;
-      }
+      if(q.includes("example")) response+=`\n📌 Example: Apply ${term} step by step.`;
       break;
     }
   }
   document.getElementById("ai-response").innerText=response;
 }
 
-// Payment verification
+// PAYMENT & DASHBOARD
 function markPaid(){
   const name=document.getElementById("payerName").value.trim();
   const phone=document.getElementById("payerPhone").value.trim();
   if(name && phone){
-    currentUser.name=name;
-    currentUser.phone=phone;
-    currentUser.paid=true;
-    alert(`✅ Payment submitted. Verify screenshot via WhatsApp: 0775302886`);
-    document.getElementById("adminUnlock").style.display="block";
+    let pending = JSON.parse(localStorage.getItem("pendingPayments")||"[]");
+    pending.push({name, phone, time:new Date().toISOString()});
+    localStorage.setItem("pendingPayments", JSON.stringify(pending));
+    alert("✅ Payment submitted. Verify screenshot via WhatsApp 0775302886");
+    document.getElementById("payerName").value="";
+    document.getElementById("payerPhone").value="";
+    renderDashboard();
   } else alert("❌ Enter name and phone number.");
 }
 
-// Admin unlock
-function unlockPapers(){
-  if(currentUser.paid){
-    let now = new Date();
-    currentUser.accessExpiry = new Date(now.getTime() + 30*24*60*60*1000); // 30 days
-    alert("✅ Papers unlocked for 30 days.");
+// Render Dashboard
+function renderDashboard(){
+  let pending=JSON.parse(localStorage.getItem("pendingPayments")||"[]");
+  let approved=JSON.parse(localStorage.getItem("approvedUsers")||"[]");
+  let html="<h3>Pending Payments</h3>";
+  if(pending.length===0) html+="<p>None</p>";
+  else{
+    html+="<table><tr><th>Name</th><th>Phone</th><th>Time</th><th>Action</th></tr>";
+    pending.forEach((u,i)=>{
+      html+=`<tr><td>${u.name}</td><td>${u.phone}</td><td>${new Date(u.time).toLocaleString()}</td>
+      <td><button onclick="approve(${i})">Approve 30 Days</button></td></tr>`;
+    });
+    html+="</table>";
   }
+  html+="<h3>Approved Users</h3>";
+  if(approved.length===0) html+="<p>None</p>";
+  else{
+    html+="<table><tr><th>Name</th><th>Phone</th><th>Access Expires</th></tr>";
+    approved.forEach(u=>{
+      html+=`<tr><td>${u.name}</td><td>${u.phone}</td><td>${new Date(u.accessExpiry).toLocaleString()}</td></tr>`;
+    });
+    html+="</table>";
+  }
+  document.getElementById("dashboardContent").innerHTML=html;
+}
+
+// Approve user
+function approve(index){
+  let pending=JSON.parse(localStorage.getItem("pendingPayments")||"[]");
+  let approved=JSON.parse(localStorage.getItem("approvedUsers")||"[]");
+  let user=pending.splice(index,1)[0];
+  user.accessExpiry=new Date(Date.now()+30*24*60*60*1000); // 30 days
+  approved.push(user);
+  localStorage.setItem("pendingPayments", JSON.stringify(pending));
+  localStorage.setItem("approvedUsers", JSON.stringify(approved));
+  alert(`✅ ${user.name} approved for 30 days.`);
+  renderDashboard();
+}
+
+// EXPORT / IMPORT
+function exportData(){
+  const data={pending:JSON.parse(localStorage.getItem("pendingPayments")||"[]"),
+              approved:JSON.parse(localStorage.getItem("approvedUsers")||"[]")};
+  const blob=new Blob([JSON.stringify(data,null,2)],{type:"application/json"});
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement("a");
+  a.href=url;
+  a.download="PMG_EDU_users.json";
+  a.click();
+  URL.revokeObjectURL(url);
+  alert("Data exported as PMG_EDU_users.json");
+}
+
+function importData(event){
+  const file=event.target.files[0];
+  if(!file) return;
+  const reader=new FileReader();
+  reader.onload=function(e){
+    const data=JSON.parse(e.target.result);
+    localStorage.setItem("pendingPayments",JSON.stringify(data.pending||[]));
+    localStorage.setItem("approvedUsers",JSON.stringify(data.approved||[]));
+    alert("Data imported successfully!");
+    renderDashboard();
+  };
+  reader.readAsText(file);
 }
 
 </script>
 </body>
-</html>
+                                                                                                    </html>
